fix layout with overflow

--- a/src/App/Dashboard/Community/index.scss
+++ b/src/App/Dashboard/Community/index.scss
@@ -24,6 +24,6 @@
   }
   & button {
     display: block;
-    margin-left: calc(100% - 100px);
+    float: right;
   }
 }
